--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="google_login">Log in using Google!</string>
     <string name="placeholder">placeholder</string>
     <string name="log_out">Log Out</string>
+    <string name="button_search">Search</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
