--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="placeholder">placeholder</string>
     <string name="log_out">Log Out</string>
     <string name="button_search">Search</string>
+    <string name="back_button">Back</string>
+    <string name="changeProfile_button">Change Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
