--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="Name">Name</string>
     <string name="Location">Location</string>
     <string name="Gym">Gym</string>
+    <string name="uploadProfile_button">Upload Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
